<resources>
    <string name="app_name">Медицинский счетчик</string>
    <string name="title_home">Главная</string>
    <string name="medicine">Препараты</string>
    <string name="organization">Фирмы</string>
    <string name="title_period">Предыдущие месяцы</string>
    <string name="title_settings">Настройки</string>
    <string name="language">Сменить язык</string>
    <string name="dark_theme">Темная тема</string>
    <string name="Organization">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail">Подробнее</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count_medicals">Кол-во лекарств</string>
    <string name="title_organizations">Компания</string>
    <string name="title_medicines">Лекарства</string>
    <string name="organizationame" >Название компании</string>
    <string name="medicinename">Название лекарства</string>
    <string name="no_match">Не найдено</string>
    <string name="organizatioAgent">Имя представителя</string>
    <string name="organizatioPhone">Телефон представителя</string>
    <string name="delete">Удаление</string>
    <string name="delete_where">Вы подтверждаете удаление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="organization_delete_error">Не возможно удалить компанию, так как есть лекарства у которых указана данная компания</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october" >Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="minus">Внимание</string>
    <string name="minus_where">Вы уверены что хотите уменьшить?</string>
    <string name="organization_not_found" >Необходимо выбрать компанию из списка</string>
    <string name="search_here" >Поищи здесь</string>
    <string name="sort_a_z">А-Я</string>
    <string name="sort_z_a">Я-А</string>
    <string name="sort_max">Максимальное</string>
    <string name="sort_min">Минимальное</string>
    <string name="title_date_sort">Фильтровать по</string>
    <string name="title_date_filter">Выбор даты:</string>
    <string name="title_sort">Фильтровать по:</string>
</resources>