<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_sort"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        />
    <Spinner
        android:id="@+id/spinnerMounth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/spinnerYear"
        android:layout_below="@id/spinnerSort"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />
    <Spinner
        android:id="@+id/spinnerYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/spinnerSort"
        android:layout_weight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_date_filter"
        android:layout_above="@id/search"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_below="@id/spinnerYear"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_here"  />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search"
        android:layout_marginTop="0dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/fragment_home_item" />

</RelativeLayout>